fix: copy button overflow, use ibm mono, not courier

--- a/src/components/ComponentDemo/Code/Code.module.scss
+++ b/src/components/ComponentDemo/Code/Code.module.scss
@@ -95,6 +95,11 @@
   }
 }
 
+.copy-button:global(.bx--copy-btn--animating) span {
+  display: inline-block;
+  left: -$spacing-03;
+}
+
 .code-bar .button {
   position: relative;
   right: 0;
