--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -172,6 +172,7 @@ fieldset.form-group {
 
 .editor-container pre,
 .editor-container textarea {
+  font-family: 'IBM Plex Mono' !important;
   white-space: pre !important;
 }
 
